Fixed alignment of expansion button

--- a/cs_app/static/css/tinker_style.css
+++ b/cs_app/static/css/tinker_style.css
@@ -19,28 +19,20 @@ html {
 
     transition: all 0.5s;
     box-sizing: border-box;
-
-    display: flex;
-    justify-content: center;
 }
 
-#c1-1 {
-    width: 90%;
-    height: 90%;
-
-    visibility: hidden;
-
-    align-self: flex-end;
-    margin: 1rem;
-}
-
-#c1-1-1 {
+#c1-2 {
     width: 100%;
-    height: 5%;
+    height: 10%;
 
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+}
+
+#expandBut {
+    width: 90%;
+    height: 2.5rem;
 }
 
 #c2 {
@@ -130,7 +122,7 @@ html {
 .but {
     color: rgba(0, 0, 0, 0.85);
     background-color: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: none;
     border-radius: 0.25rem;
     box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
     box-sizing: border-box;
